# CRMHack

./: .docker-compose.yml.swp  .pre-commit-config.yaml  asset-manifest.json  docker-compose.yml  index.html
.github/workflows/: .bitrix.yml.swp  bitrix.yml  front.yml
bitrix/: Dockerfile  entrypoint.sh  index.php  pyproject.toml
chat/: Dockerfile  entrypoint.sh  pyproject.toml
chat/src/: app.py  chat.py  config.py  handlers.py  storage.py
client/: client.py  pyproject.toml
frontend/: Dockerfile  README.md  craco.config.js  package-lock.json  package.json  tsconfig.paths.json
frontend/src/: App.scss  App.tsx  index.tsx
nginx/: Dockerfile  index.html  nginx.conf
static/css/: main.00b59c9e.chunk.css  main.00b59c9e.chunk.css.map  main.272d9b16.chunk.css  main.272d9b16.chunk.css.map  main.38ac5602.chunk.css  main.38ac5602.chunk.css.map  main.82190ef7.chunk.css  main.82190ef7.chunk.css.map  main.f6f08a2d.chunk.css  main.f6f08a2d.chunk.css.map
static/js/: 2.102c7566.chunk.js  2.102c7566.chunk.js.map  2.97c761c9.chunk.js  2.97c761c9.chunk.js.map  2.9d43743d.chunk.js  2.9d43743d.chunk.js.map  main.7442effd.chunk.js  main.7442effd.chunk.js.map  main.a7df4ae5.chunk.js  main.a7df4ae5.chunk.js.map  main.ac308cf5.chunk.js  main.ac308cf5.chunk.js.map  main.b8446d03.chunk.js  main.b8446d03.chunk.js.map  main.c2dc8444.chunk.js  main.c2dc8444.chunk.js.map  main.d29f13a7.chunk.js  main.d29f13a7.chunk.js.map  main.ee2ddafd.chunk.js  main.ee2ddafd.chunk.js.map  runtime-main.35136c54.js  runtime-main.35136c54.js.map  runtime-main.b1e7ccb9.js  runtime-main.b1e7ccb9.js.map
waifu/: photos.json
(+18 files in other folders)
