[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["S. Guliaev <dev.sagul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
falcon = "^3.0.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
