[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fast-bitrix24 = "^1.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.14.0"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
