[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["S. Guliaev <dev.sagul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
